--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@types/react-slick": "^0.23.10",
+    "aos": "^2.3.4",
     "bootstrap": "^5.3.0",
     "ionicons": "^7.1.2",
     "react": "^18.2.0",
@@ -21,9 +22,11 @@
     "react-router-dom": "^6.11.2",
     "react-slick": "^0.29.0",
     "slick-carousel": "^1.8.1",
+    "styled-components": "^6.0.1",
     "swiper": "^9.4.1"
   },
   "devDependencies": {
+    "@types/aos": "^3.0.4",
     "@types/react": "^18.0.37",
     "@types/react-dom": "^18.0.11",
     "@types/react-headroom": "^3.2.0",
