--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@types/react-slick": "^0.23.10",
     "aos": "^2.3.4",
     "bootstrap": "^5.3.0",
+    "global": "^4.4.0",
     "ionicons": "^7.1.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
@@ -25,7 +26,8 @@
     "react-slick": "^0.29.0",
     "slick-carousel": "^1.8.1",
     "styled-components": "^6.0.1",
-    "swiper": "^9.4.1"
+    "swiper": "^9.4.1",
+    "ts-node": "^10.9.1"
   },
   "devDependencies": {
     "@types/aos": "^3.0.4",
